2001-05-15  Tom Tromey  <tromey@redhat.com>

	Fix for maintclean.test:
	* tests/Makefile.am (XFAIL_TESTS): Removed maintclean.test.
	* lib/am/clean.am (distclean-generic): Don't remove config.cache
	or config.log.
	(distclean, maintainer-clean): Moved to...
	* lib/am/configure.am: ... here.
	(distclean): Remove config.cache and config.log.
	(maintainer-clean): Removed.
	(maintainer-clean-conf): New target.
	(maintainer-clean-am): New target.

	* tests/Makefile.am (TESTS): Added maintclean.test.
	(XFAIL_TESTS): Likewise.
	* tests/maintclean.test: New file.

	Fixes PR automake/175:
	* tests/target-cflags.test: Use $needs_gnu_make.
	* tests/exsource.test: Use $needs_gnu_make.
	* tests/make.test: Require GNU make.
	* tests/defs (needs_gnu_make): Compute.

2001-05-14  Tom Tromey  <tromey@redhat.com>

	* lib/ylwrap: Fixed quoting on regular expression.  Fixes
	yacc4.test.

	Fix for texinfo10.test.
	* tests/Makefile.am (XFAIL_TESTS): Remove texinfo10.test.
	* lib/am/texinfos.am: Use LOCAL-TEXIS liberally.
	* automake.in (handle_texinfo_helper): New sub.
	(handle_texinfo): Rewrote.  Now defines LOCAL-TEXIS.
	* tests/texinfo10.test: Added more cases.

	Fix for yaccvpath.test:
	* tests/Makefile.am (XFAIL_TESTS): Removed yaccvpath.test.
	* lib/am/distdir.am (distdir): Always look for file in build
	directory first.
	* lib/ylwrap: Quote the `#line' regular expression.
	* lib/am/yacc.am (%YACC_SUFFIX%%C_SUFFIX%): Reverted earlier
	change; don't run sed on the generated file.
	* tests/yaccvpath.test: Create new parser in srcdir.  Added test
	to make sure parser will be rebuilt at dist time.

2001-05-13  Pavel Roskin  <proski@gnu.org>

	* automake.in ($IGNORE_PATTERN): Allow spaces before comments
	beginning with `##'.
	* automake.texi (General Operation): Document it.

2001-05-13  Tom Tromey  <tromey@redhat.com>

	Reported by Rainer Orth:
	* lib/am/distdir.am (?DISTDIR?distdir): Define conditional on
	TOPDIR_P.
	* tests/Makefile.am (TESTS): Added distname.test.