@@ -1,5 +1,9 @@
 2001-05-15  Tom Tromey  <tromey@redhat.com>
 
+	Fix for PR automake/177:
+	* Makefile.am (maintainer-clean): Set perllibdir before invoking
+	automake or aclocal.
+
 	Fix for maintclean.test:
 	* tests/Makefile.am (XFAIL_TESTS): Removed maintclean.test.
 	* lib/am/clean.am (distclean-generic): Don't remove config.cache
